@@ -940,6 +940,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6545: Removed assert statements in distutils.Extension, so the 
+  behavior is similar when used with -O.
+
 - unittest has been split up into a package.  All old names should still work.
 
 - Issue #6466: now distutils.cygwinccompiler and distutils.emxccompiler
